# android-iced-example

NativeActivity/: Cargo.toml  README.md  build.ps1  build.rs  gradle.properties
NativeActivity/app/: build.gradle
NativeActivity/app/jni/: Android.mk  Application.mk
NativeActivity/src/: lib.rs
